--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ pandas>=2.0.0
 numpy>=1.24.0
 yfinance>=0.2.28
 pyarrow>=14.0.0
+lightgbm>=4.0.0
+scikit-learn>=1.3.0
+tqdm>=4.65.0
+python-dateutil>=2.8.0
